# sqrl

./: .gitignore  README.md  TODO  setup.py
Arduino/SqrlClient/: SqrlClient.ino  sqrl_client.h  sqrl_comm.cpp  sqrl_comm.h  sqrl_conv.h  sqrl_crypto.cpp  sqrl_crypto.h  sqrl_s4.h
Arduino/tests/: RNG_mock.cpp  TestCurve25519.cpp  aes_gcm_main.cpp
common/sqrl/src/: sqrl_comm.h
esp32-sqrl/: .ccls  .clang_complete  .gcc-flags.json  platformio.ini
esp32-sqrl/src/: main.cpp  sqrl_client.h  sqrl_conv.h  sqrl_crypto.cpp  sqrl_s4.h
examples/: sample_client.py  sample_server.py
nrf_sqrl/: README.txt  main.c  main_usbd.c  mbedtls_config.h  sqrl_client.c  sqrl_client.h  sqrl_comm.c  sqrl_comm.h  sqrl_comm_test.c  sqrl_comm_test.py  sqrl_conv.c  sqrl_conv.h  sqrl_crypto.c  sqrl_crypto.h  sqrl_main_test.c  sqrl_s4.h
nrf_sqrl/pca10040/blank/arm5_no_packs/: nrf_crypto_eddsa_pca10040.uvoptx  nrf_crypto_eddsa_pca10040.uvprojx
nrf_sqrl/pca10040/blank/arm5_no_packs/RTE/_nrf52832_xxaa/: RTE_Components.h
nrf_sqrl/pca10040/blank/armgcc/: Makefile
nrf_sqrl/pca10040/blank/config/: sdk_config.h
nrf_sqrl/pca10056/blank/arm5_no_packs/: nrf_crypto_eddsa_pca10056.uvoptx  nrf_crypto_eddsa_pca10056.uvprojx
nrf_sqrl/pca10056/blank/armgcc/: Makefile
nrf_sqrl/pca10056/blank/config/: sdk_config.h
nrf_sqrl/pca10059/mbr/arm5_no_packs/: cli_pca10059_mbr.uvoptx  cli_pca10059_mbr.uvprojx
nrf_sqrl/pca10059/mbr/armgcc/: Makefile
nrf_sqrl/pca10059/mbr/config/: sdk_config.h
nrf_sqrl_usbd/: main.c
nrf_sqrl_usbd/pca10040/blank/arm5_no_packs/: cli_pca10040.uvoptx  cli_pca10040.uvprojx
nrf_sqrl_usbd/pca10040/blank/arm5_no_packs/RTE/_nrf52832_xxaa/: RTE_Components.h
nrf_sqrl_usbd/pca10059/mbr/arm5_no_packs/: cli_pca10059_mbr.uvoptx  cli_pca10059_mbr.uvprojx
nrf_sqrl_usbd/pca10059/mbr/arm5_no_packs/RTE/_nrf52840_xxaa/: RTE_Components.h
nrf_sqrl_usbd/pca10059/mbr/config/: sdk_config.h
pysqrl/: requirements.txt  sqrl_conv.py
pysqrl/pysqrl/: sqrl_s4.py  sqrl_server.py
rustsqrl/: Cargo.toml
rustsqrl/src/: main.rs  sqrl_crypto.rs  sqrl_s4.rs
sqrl/: __init__.py  background_client.py  cli.py  log_setup.py  server.py  sqrl  sqrl.py  sqrl_client.py  sqrl_conv.py  sqrl_crypto.py  sqrl_s4.py  sqrl_url.py  sqrlgui.py
sqrl/client/: __init__.py  baseconv.py  client.py  crypt.py  main.py  request.py
sqrl/mkm/: __init__.py  account.py  test.py
sqrl/server/: handler.py
tests/: aes_gcm_main.cpp  baseconv_test.py  mkm_test.py  sign_test.py  test_suite.py
tomu-sqrl/: CMakeLists.txt  Makefile  Makefile.common  Makefile.sqrl.common  README.txt  mbedtls_config.h  sqrl_comm.c  sqrl_comm.h  usb-cdcacm.c
tomu-sqrl/cmake/: flash.cmake  gitversion.cmake
